Fixed 125% resolution overlap, added content justification to the game box

--- a/style.css
+++ b/style.css
@@ -47,15 +47,13 @@ body {
 
 .game-box{
     width: 70%;
-    min-height: 50vh;
+    min-height: 60vh;
     padding: 1% 1%;
 
 
     display: flex;
     flex-wrap: wrap;
-
-    /* gap: 1%; */
-
+    justify-content: space-around;
 
     border-radius: 10px 0px 0px 10px;
 
@@ -189,7 +187,7 @@ TO KEEP THE SIZE OF THE "SLOT" THE SAME */
 
 
 
-.time {
+.stats {
     height: 20%;
     width: 100%;
 
@@ -199,7 +197,8 @@ TO KEEP THE SIZE OF THE "SLOT" THE SAME */
 
 .pairs-left {
     width: 60%;
-    margin: 1% auto 2%;
+
+    margin: 0% auto 5%;
 
     font-size: 16px;
 }
@@ -211,7 +210,7 @@ TO KEEP THE SIZE OF THE "SLOT" THE SAME */
 
 .time-display {
     width: 60%;
-    margin: 2% auto 1%;
+    margin: 5% auto 0%;
 
     font-size: 16px;
 }
